--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
         <version>4.11.0</version>
         <scope>test</scope>
     </dependency>
+    <!-- 資料 -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.15.2</version>
+    </dependency>
   </dependencies>
   
   <build>
