--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
         <version>4.11.0</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-inline</artifactId>
+        <version>4.0.0</version>
+        <scope>test</scope>
+    </dependency>
     <!-- 資料 -->
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
